syntax = "proto3";


option go_package = "/proto";

package lider;

message Name {
    string name = 1;
}

message Status {
    bool status = 1;
}

message Playermove {
    int32 move = 1;
}

message Nextgame {
    int32 answer = 1;
}

message Amount {
    int32 total = 1;
}

message Msg {
    string message = 1;
}


service StartServer{
    rpc AgregarJugador(Name) returns (Status) {}
    rpc Juego1(Playermove) returns (Status) {}
    rpc Siguientejuego(Name) returns (Nextgame) {}
    rpc PedirPozo(Msg) returns (Amount) {}
    rpc SeSolicitoPozo(Name) returns (Amount) {}
    rpc EstadoLider(Name) returns (Status) {}
    rpc MandarALider(Playermove) returns (Status) {}
    
    
}
